@@ -32,8 +32,7 @@ class TwillBrowser:
         #
         
         links_factory = mechanize._mechanize.LinksFactory(link_parser_class=TidyAwareLinksParser)
-#        forms_factory = TidyAwareFormsFactory(ignore_errors=True)
-        forms_factory = TidyAwareFormsFactory()
+        forms_factory = TidyAwareFormsFactory(ignore_errors=False)
 
         factory = mechanize._mechanize.RobustFactory()
 
